--- a/index.html
+++ b/index.html
@@ -1,1 +1,13 @@
-<!-- Your code here -->
+<title>Cat Perry's Favorite Cats</title>
+
+<html lang="en"></html>
+
+<link rel="stylesheet" type="text/css" href="style.css" />
+<link
+  rel="stylesheet"
+  href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+/>
+<link rel="stylesheet" type="text/css" href="company.css" />
+<link rel="stylesheet" type="text/css" href="engineering-department.css" />
+<link rel="stylesheet" type="text/css" href="project-x-launch.css" />
+<link rel="stylesheet" type="text/css" href="typography.css" />
